added batch processing, added tests
